night-mode: Fix invite_user_form overlap bug.
Adding the element for the invite link would cause the modal footer to
shift upwards, in nightmode this caused the stream list to appear
beneath the footer as the footer background was transparent. This commit
replaces that styling with a solid equivalent color.

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -359,6 +359,11 @@ on a dark background, and don't change the dark labels dark either. */
         box-shadow: inset 0 1px 0 hsla(0, 0%, 0%, 0.2);
     }
 
+    #invite_user_form .modal-footer {
+        // no transperancy prevents overlap issues
+        background-color: hsl(211, 28%, 14%);
+    }
+
     .subscriptions-container .right .display-type,
     .stream-row,
     .subscriptions-container .left .search-container,
